# QuantApprentice-Studio

./: .gitignore  README.md
QuantApprentice_clean/: .gitignore  README.md  pyproject.toml  requirements.txt
QuantApprentice_clean/docs/: REPRODUCIBILITY.md
QuantApprentice_clean/quant_toolkit/: __init__.py  _paths.py
QuantApprentice_clean/quant_toolkit/apprentice_loop/: __init__.py  replay.py
QuantApprentice_clean/quant_toolkit/backtest/: __init__.py  engine.py  metrics.py  nav_curve_backtest.py  teacher_loop_nav_backtest.py
QuantApprentice_clean/quant_toolkit/data/: __init__.py  loaders.py  schema.py  trading_calendar.py
QuantApprentice_clean/quant_toolkit/examples/: run_alignment_test.py  run_autonomous_teacher_loop.py  run_market_scorefit_backtest.py  run_scope_alignment_test.py  (+2 more)
QuantApprentice_clean/scripts/: rebuild_teacher_factor_reports_v2.py  run_inner_loop_v7_bestguard_explore_longbatch.sh  run_market_backtest.sh  run_outer_loop.sh  run_scope_alignment.sh
QuantApprentice_clean/templates/: final_lesson_state.example.json  teacher_selection.example.json
QuantApprentice_studio/: .gitignore  README.md  environment.yml  pyproject.toml
QuantApprentice_studio/docs/: architecture.md  clean_pipeline_mapping.md
QuantApprentice_studio/examples/: new_signal_template.json
QuantApprentice_studio/scripts/: phase9_live_gptoss_validation.py  smoke_phase3_chat_action.py  smoke_phase4_agent_timeline.py  smoke_phase5_simple_scoring.py  smoke_phase6_expert_mode_reorg.py  smoke_phase7_e2e_ux_rehearsal.py  smoke_phase8_ui_polish_demo_readiness.py
(+89 files in other folders)
