[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-toolkit"
version = "1.0.0"
description = "QuantApprentice reproducibility toolkit"
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.23.0",
  "pyyaml>=6.0",
  "requests>=2.28.0",
  "scipy>=1.9.0",
]

[project.optional-dependencies]
ml = [
  "xgboost>=1.7.0",
  "scikit-learn>=1.1.0",
  "joblib>=1.2.0",
]
plots = [
  "matplotlib>=3.6.0",
  "seaborn>=0.12.0",
]
dev = [
  "pytest>=7.2.0",
]

[tool.setuptools.packages.find]
include = ["quant_toolkit*"]
